--- a/views/_css/custom.css
+++ b/views/_css/custom.css
@@ -132,9 +132,7 @@ border: 1px dashed red !important;
     text-decoration: line-through;
 }
 
-/*Remove as margens do  o ícone de calendário dos inputs de data
-*Para dispositivos móveis
-*/
+/*Remove as margens do  o ícone de calendário dos inputs de data para dispositivos móveis*/
 @media screen and (max-width: 600px) {
     input[type="month"]{
         margin: 0;
@@ -157,3 +155,20 @@ border: 1px dashed red !important;
     }
 }
 
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
