--- a/views/_css/custom.css
+++ b/views/_css/custom.css
@@ -154,7 +154,7 @@ border: 1px dashed red !important;
         padding-right: 1;
     }
 }
-
+/* 
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
@@ -171,4 +171,4 @@ body {
     100% {
         background-position: 0% 50%;
     }
-}
+} */
